--- a/xss/production/test/ms2.html
+++ b/xss/production/test/ms2.html
@@ -46,7 +46,7 @@ function start(resolution)
                         default_interpolate,
                         function(value)
                         {
-                            fade_in.target.alpha = value;;
+                            this__.target.alpha = value;;
                         },
                         [
                         {t: 0, value: 0},
@@ -58,7 +58,7 @@ function start(resolution)
                         default_interpolate,
                         function(value)
                         {
-                            fade_in.target.alpha = value;;
+                            this__.target.alpha = value;;
                         },
                         [
                         {t: 1, value: 0.300000012},
