maintenance, java language 0.7

--- a/xss/production/test/ms2.html
+++ b/xss/production/test/ms2.html
@@ -12,7 +12,7 @@
 <script type="text/javascript">			
 var g_elapsed = -1;
 var g_delta = 0.0;
-var g_sequencer = new ms.state.Manager();
+var g_sequence_manager = new ms.state.Manager();
 var application = {}
 function default_interpolate(a, b, t)
 {
@@ -29,7 +29,7 @@ function start(resolution)
         else
 		    g_delta  = now - g_elapsed;  
         g_elapsed = now; 
-		g_sequencer.update(g_delta);
+		g_sequence_manager.update(g_delta);
         window.setTimeout(update, resolution);  
 	}  
 	window.setTimeout(update, resolution);  
@@ -46,7 +46,7 @@ function start(resolution)
                         default_interpolate,
                         function(value)
                         {
-                            this__.target.alpha = value;;
+                            fade_in.target.alpha = value;;
                         },
                         [
                         {t: 0, value: 0},
@@ -58,7 +58,7 @@ function start(resolution)
                         default_interpolate,
                         function(value)
                         {
-                            this__.target.alpha = value;;
+                            fade_in.target.alpha = value;;
                         },
                         [
                         {t: 1, value: 0.300000012},
