--- a/xss/production/test/ms3.html
+++ b/xss/production/test/ms3.html
@@ -6,15 +6,34 @@
 <script type="text/javascript" src="../js/jquery.utils.js"></script>
 <script type="text/javascript" src="../js/utils.js"></script>
 <script type="text/javascript" src="../js/prototype.js"></script>
-<script type="text/javascript" src="../js/ms/ms-ui.js"></script>
-<script type="text/javascript" src="../js/ms/ms-streamer.js"></script>
-<script type="text/javascript" src="../js/ms/ms-state.js"></script>
+<script type="text/javascript" src="../js/ms-ui.js"></script>
+<script type="text/javascript" src="../js/ms-streamer.js"></script>
+<script type="text/javascript" src="../js/ms-state.js"></script>
 <script type="text/javascript">			
 var g_ui;
 var g_elapsed = -1;
 var g_delta = 0.0;
 var g_canvas;
-                application.target =  0;
+var g_ui_root;
+var application = {};
+function start(resolution)  
+{  
+	var start = new Date().getTime();  
+	function update()  
+	{  
+		var now   = new Date().getTime();
+        if (g_elapsed < 0)
+            g_delta = 0; //first update
+        else
+		    g_delta  = now - g_elapsed;  
+        g_elapsed = now; 
+		var context = g_canvas.getContext('2d');
+		g_ui.update(g_delta, context);
+		window.setTimeout(update, resolution);  
+	}  
+	window.setTimeout(update, resolution);  
+}  
+                application.increment =  10;
 window.onload = function() 
 {
 	var drawingCanvas = document.getElementById("myCanvas");
@@ -23,14 +42,19 @@ window.onload = function()
 	{
 		var client =
 		{
-			width: ,
-			height: ,
+			width: 600,
+			height: 400,
 			canvas: drawingCanvas
 		};
 		var streamer = new ms.streamer.Streamer();
 		var ui = new ms.ui.Manager(client, streamer);
 		var resources = new ms.streamer.PackageContainer();
 		g_ui = ui;
+        g_ui_root = ui.root;
+        var ui_images = 
+        [
+				    'images/img1.png',
+        ];
 		ui.load_images(ui_images, function()
 		{
 			drawingCanvas.onmousemove = function(ev)
@@ -45,12 +69,18 @@ window.onload = function()
 			{
 				ui.mouse_up(ev.clientX, ev.clientY);                  
 			};
-            out()
+		    img1 = g_ui_root.newImage(
+	    );
+                img1.src("images/img1.png");
+	img1.click = function()
+	{    
+		img1.set_width(img1.get_width() + application.increment);
+img1.set_height(img1.get_height() + application.increment);
+	};
+            img1.rect(100, 100, 20, 20);
+            if (application.init)
             {
-                if (application.init)
-                {
-                    application.init();
-                }
+                application.init();
             }
 			start();
 			ui.draw(drawingCanvas.getContext('2d'));
@@ -60,7 +90,7 @@ window.onload = function()
 </script>
 </head>
 <body>
-	<canvas id="myCanvas" width="" height="">
+	<canvas id="myCanvas" width="600" height="400">
 		<p>Your browser doesn't support canvas.</p>
 	</canvas>
 </body>
