--- a/xss/production/test/ms5.html
+++ b/xss/production/test/ms5.html
@@ -39,6 +39,7 @@ function start(resolution)
 	}  
 	window.setTimeout(update, resolution);  
 }  
+                application.clicks = 0;
 window.onload = function() 
 {
 	var drawingCanvas = document.getElementById("myCanvas");
@@ -62,7 +63,8 @@ window.onload = function()
 				    'images/progress.empty.png',
 				    'images/smile_grin_48.png',
 				    'images/smile_sad_48.png',
-				    'images/arrow_down_green_48.png',
+				    'images/arrow_left.png',
+				    'images/arrow_right.png',
 				    'images/arrow_right_48.png',
 				    'images/arrow_right_green_48.png',
 				    'images/arrow_left_48.png',
@@ -84,38 +86,65 @@ window.onload = function()
 			};
 		    main = g_ui_root.newSwitch(
 	    );
-                main.rect(0, 0, 600, 300);
+                main.rect(0, 0, 600, 250);
 		    test1 = main.newComponent(
 	    );
 		    lbl1 = test1.newLabel(
 	    "Verdana");
-                lbl1.text("click button");
-                lbl1.position(50, 40);
+                lbl1.text("click smiley");
+                lbl1.position(270, 200);
 		    btn1 = test1.newButton(
 	    "images/smile_sad_48.png","images/smile_grin_48.png");
+	btn1.click = function()
+	{    
+		lbl1.text("Got " + application.clicks++ + " smileys");
+	};
  btn1.center(50, 50); 
 		    test2 = main.newComponent(
 	    );
 		    pb1 = test2.newProgressBar(
 	    );
  pb1.center(150, 10); 
-		    btn3 = test2.newButton(
-	    "images/arrow_down_green_48.png","images/arrow_down_green_48.png");
-                btn3.rect(250, 210, 50, 50);
-		    test3 = main.newComponent(
-	    );
-		    ln1 = test3.newLine(
-	    );
-                ln1.set_x1(0);
-                ln1.set_y1(0);
-                ln1.set_x2(300);
-                ln1.set_y2(40);
+		    btn2 = test2.newImage(
+	    "images/arrow_left.png");
+                btn2.src("images/arrow_left.png");
+	btn2.click = function()
+	{    
+		pb1.value(pb1.get_value() - 1);
+	};
+                btn2.rect(200, 115, 20, 20);
+		    btn3 = test2.newImage(
+	    "images/arrow_right.png");
+                btn3.src("images/arrow_right.png");
+	btn3.click = function()
+	{    
+		pb1.value(pb1.get_value() + 1);
+	};
+                btn3.rect(380, 115, 20, 20);
+		    lbl2 = test2.newLabel(
+	    "Verdana");
+                lbl2.text("click small arrows to adjust percentage");
+                lbl2.position(210, 200);
 		    btnNext = g_ui_root.newButton(
 	    "images/arrow_right_green_48.png","images/arrow_right_48.png");
-                btnNext.rect(250, 300, 50, 50);
+	btnNext.click = function()
+	{    
+		if (main.get_active() < main.count() - 1)
+{
+main.active(main.get_active() + 1);
+}
+	};
+                btnNext.rect(320, 250, 50, 50);
 		    btnPrev = g_ui_root.newButton(
 	    "images/arrow_left_green_48.png","images/arrow_left_48.png");
-                btnPrev.rect(300, 300, 50, 50);
+	btnPrev.click = function()
+	{    
+		if (main.get_active() > 0)
+{
+main.active(main.get_active() - 1);
+}
+	};
+                btnPrev.rect(220, 250, 50, 50);
             if (application.init)
             {
                 application.init();
