--- a/xss/production/test/ms1.html
+++ b/xss/production/test/ms1.html
@@ -38,7 +38,8 @@ function start(resolution)
                 application.target = 0;
 test_sequence =
 new ms.state.Sequence(
-g_sequence_manager);
+g_sequence_manager
+);
 	test_sequence.display = function() 
 	{
 		console.log("test_sequence> Target: " + application.target);
@@ -100,7 +101,8 @@ test_sequence1.start();
                 }
 test_sequence1 =
 new ms.state.Sequence(
-g_sequence_manager);
+g_sequence_manager
+);
 	test_sequence1.display = function() 
 	{
 		console.log("test_sequence1> Target: " + application.target);
