--- a/xss/production/test/ms2.html
+++ b/xss/production/test/ms2.html
@@ -36,13 +36,14 @@ function start(resolution)
 	window.setTimeout(update, resolution);  
 }  
             fade_in = Class.create(ms.state.Sequence,
-        {
+{
     initialize: function($super
                 , manager
-                    )
+    )
     {
         $super(
-        manager        );
+        manager
+        );
                 var this__ = this;
             this.parent_sequence = null;
                     var ____i1 = new ms.state.Interpolator(
@@ -75,7 +76,8 @@ function start(resolution)
                 application.target = 0;
 test_sequence =
 new fade_in(
-g_sequence_manager);
+g_sequence_manager
+);
 	test_sequence.display = function() 
 	{
 		console.log("test_sequence> Target: " + application.target);
@@ -88,7 +90,8 @@ test_sequence1.start();
             test_sequence.parent_sequence = null;
 test_sequence1 =
 new fade_in(
-g_sequence_manager);
+g_sequence_manager
+);
 	test_sequence1.display = function() 
 	{
 		console.log("test_sequence1> Target: " + application.target);
