--- a/xss/production/test/ms4.html
+++ b/xss/production/test/ms4.html
@@ -41,13 +41,14 @@ function start(resolution)
 }  
 var fade1;
             fade_in = Class.create(ms.state.Sequence,
-        {
+{
     initialize: function($super
                 , manager
-                    )
+    )
     {
         $super(
-        manager        );
+        manager
+        );
                 var this__ = this;
             this.parent_sequence = null;
                     var ____i1 = new ms.state.Interpolator(
@@ -117,16 +118,17 @@ window.onload = function()
 				ui.mouse_up(ev.clientX, ev.clientY);                  
 			};
 		    img1 = g_ui_root.newImage(
-	    );
+	    "images/img1.png");
                 img1.src("images/img1.png");
 	img1.click = function()
 	{    
 		fade1.start();
 	};
-            img1.rect(100, 100, 50, 50);
+                img1.rect(100, 100, 50, 50);
 fade1 =
 new fade_in(
-g_sequence_manager);
+g_sequence_manager
+);
             fade1.parent_sequence = null;
             if (application.init)
             {
