--- a/xss/production/test/ms4.html
+++ b/xss/production/test/ms4.html
@@ -117,13 +117,13 @@ window.onload = function()
 				ui.mouse_up(ev.clientX, ev.clientY);                  
 			};
 		    img1 = g_ui_root.newImage(
-	    );
+	    "images/img1.png");
                 img1.src("images/img1.png");
 	img1.click = function()
 	{    
 		fade1.start();
 	};
-            img1.rect(100, 100, 50, 50);
+                img1.rect(100, 100, 50, 50);
 fade1 =
 new fade_in(
 g_sequence_manager);
