--- a/xss/production/test/3js-ms.html
+++ b/xss/production/test/3js-ms.html
@@ -13,29 +13,44 @@
 <script type="text/javascript" src="../js/three/Three.js"></script>
 <script type="text/javascript" src="../js/three/Stats.js"></script>
 <script type="text/javascript" src="../js/three/RequestAnimationFrame.js"></script>
+<script type="text/javascript" src="../js/jquery-1.4.2.min.js" ></script>
+<script type="text/javascript" src="../js/jquery.utils.js"></script>
+<script type="text/javascript" src="../js/utils.js"></script>
+<script type="text/javascript" src="../js/prototype.js"></script>
+<script type="text/javascript" src="../js/ms-ui.js"></script>
+<script type="text/javascript" src="../js/ms-streamer.js"></script>
+<script type="text/javascript" src="../js/ms-state.js"></script>
 <script type="text/javascript">		
 	var renderer = new THREE.CanvasRenderer();	
+var SCREEN_WIDTH = window.innerWidth;
+var SCREEN_HEIGHT = window.innerHeight;
+var g_elapsed = -1;
+var g_delta = 0.0;			
+var anim_1;var fade_1;
+var threejs_models = 
+        [
+        ];
+var application = {};
 		var g_sequence_manager = new ms.state.Manager();
         function default_interpolate(a, b, t)
         {
             return a + (b - a)*t;
         }
-function start(resolution)  
-{  
-	var start = new Date().getTime();  
-	function update()  
-	{  
-		var now   = new Date().getTime();
-        if (g_elapsed < 0)
-            g_delta = 0; //first update
-        else
-		    g_delta  = now - g_elapsed;  
-        g_elapsed = now; 
+soundRenderer = new THREE.SoundRenderer();		
+document.body.appendChild( soundRenderer.domElement );
+renderer.setSize( window.innerWidth, window.innerHeight );
+function render() {
+renderer.clear();
+var now   = new Date().getTime();
+if (g_elapsed < 0)
+    g_delta = 0; //first update
+else
+g_delta  = now - g_elapsed;  
+g_elapsed = now; 
 		g_sequence_manager.update(g_delta);
-		window.setTimeout(update, resolution);  
-	}  
-	window.setTimeout(updatvar anim_1;e, resolution);  
-}  
+renderer.render( scene, camera );
+soundRenderer.render( scene, camera );
+}
             move_anim = Class.create(ms.state.Sequence,
         {
     initialize: function($super
@@ -51,11 +66,11 @@ function start(resolution)
                         default_interpolate,
                         function(value)
                         {
-                            this__.position.x.x = value;;
+                            this__.target.position.x = value;
                         },
                         [
                         {t: 0, value: 0},
-                        {t: 2, value: 100},
+                        {t: 2, value: 600},
                         ]);
                     this.addAction(null, "x", new ms.state.State(0, 2, ____i1));                    
                     var ____i2 = new ms.state.Interpolator(
@@ -63,25 +78,53 @@ function start(resolution)
                         default_interpolate,
                         function(value)
                         {
-                            this__.position.x.x = value;;
+                            this__.target.position.x = value;
                         },
                         [
-                        {t: 2, value: 100},
+                        {t: 2, value: 600},
                         {t: 6, value: 0},
                         ]);
                     this.addAction(null, "x", new ms.state.State(2, 6, ____i2));                    
     },
                 target : null,
 });
-soundRenderer = new THREE.SoundRenderer();		
-document.body.appendChild( soundRenderer.domElement );
-renderer.setSize( window.innerWidth, window.innerHeight );
-var application = {};
-function render() {
-renderer.clear();
-renderer.render( scene, camera );
-soundRenderer.render( scene, camera );
-}
+            fade_anim = Class.create(ms.state.Sequence,
+        {
+    initialize: function($super
+                , manager
+                    )
+    {
+        $super(
+        manager        );
+                var this__ = this;
+            this.parent_sequence = null;
+                    var ____i3 = new ms.state.Interpolator(
+                        "opacity", 
+                        default_interpolate,
+                        function(value)
+                        {
+                            this__.target.materials[0].opacity = value;
+                        },
+                        [
+                        {t: 0, value: 1},
+                        {t: 2, value: 0},
+                        ]);
+                    this.addAction(null, "opacity", new ms.state.State(0, 2, ____i3));                    
+                    var ____i4 = new ms.state.Interpolator(
+                        "opacity", 
+                        default_interpolate,
+                        function(value)
+                        {
+                            this__.target.materials[0].opacity = value;
+                        },
+                        [
+                        {t: 2, value: 0},
+                        {t: 6, value: 1},
+                        ]);
+                    this.addAction(null, "opacity", new ms.state.State(2, 6, ____i4));                    
+    },
+                target : null,
+});
 	var cylinder_material = new THREE.MeshBasicMaterial({
 	color:Math.random() * 0xffffff
 	});
@@ -91,40 +134,71 @@ new THREE.Scene(
 var camera = 
 new THREE.Camera(
 75,1.5,1,3000,null);
-	camera.position.z = 1000;
+                camera.position.z = 1000;
 var light = 
 new THREE.DirectionalLight(
 1677,null,null,null);
-				;
-				scene.addLight(light);
-	light.position.y = 0.5;
-	light.position.z = 1;
-				var cylinder_1_cylinder =
+		;
+	scene.addLight(light);
+                light.position.y = 0.5;
+                light.position.z = 1;
+	var cylinder_1_cylinder = 
 new THREE.Cylinder(
 200,100,100,500,null,null);
-				var cylinder_1 = new THREE.Mesh(cylinder_1_cylinder,
-				cylinder_material);
-				scene.addObject(cylinder_1);
-	cylinder_1.click = function()
-	{    
+	var cylinder_1 = new THREE.Mesh(cylinder_1_cylinder,
+	cylinder_material);
+	scene.addObject(cylinder_1);
+                cylinder_1.rotation.x = 10;
+                cylinder_1.rotation.y = 10;
+	document.addEventListener( 'click', click_cylinder_1, false );
+	function click_cylinder_1 (event)
+	{
+	var x = event.clientX;
+	var y = event.clientY;
+		event.preventDefault();
+		var vector = new THREE.Vector3( ( event.clientX / window.innerWidth ) * 2 - 1, - ( event.clientY / window.innerHeight ) * 2 + 1, 0.5 );
+		projector = new THREE.Projector();
+		projector.unprojectVector( vector, camera );
+		var ray = new THREE.Ray( camera.position, vector.subSelf( camera.position ).normalize() );
+		var intersects = ray.intersectObject( cylinder_1 );
+		if ( intersects.length > 0 ) 
+		{   
 		anim_1.start();
+fade_1.start();
+		}
 	};
-	cylinder_1.rotation.x = 10;
-	cylinder_1.rotation.y = 10;
-	cylinder_1.position.x = 600;
 anim_1 =
 new move_anim(
 g_sequence_manager);
             anim_1.parent_sequence = null;
-	application.init = function()
-	{    
+fade_1 =
+new fade_anim(
+g_sequence_manager);
+            fade_1.parent_sequence = null;
+application.init = function()
+{    
 		anim_1.target = cylinder_1;
+fade_1.target = cylinder_1;
 	};
+if (application.init)
+{
+	application.init();
+}
 document.body.appendChild( renderer.domElement );
 animate();
 function animate() {
 	requestAnimationFrame( animate );
 	render();
+}
+function get_model(model_id)
+{
+		for(var i = 0; i < this.threejs_models.length; i++)
+		{
+			var model = this.threejs_models[i];
+			if (model.id == model_id)
+				return model.src;
+		}
+		return null;
 }
 </script>
 </body>
